bug 245673 named literal strings should be const r+sr=darin